@@ -28,7 +28,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)gen.h	1.10 (gritter) 10/25/05
+ * Sccsid @(#)gen.h	1.11 (gritter) 11/21/05
  */
 
 /*
@@ -108,7 +108,7 @@ void setsize(int, float);
 void t_fp(int, char *, char *, void *);
 int t_font(char *);
 void setfont(int);
-void t_sf(void);
+void t_sf(int);
 void t_charht(int, float);
 void t_slant(int);
 void t_supply(char *);
